cmake_minimum_required (VERSION 3.6)

project(main)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
aux_source_directory (${PROJECT_SOURCE_DIR}/src SRC_LIST)

include_directories (${PROJECT_SOURCE_DIR}/include)
MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir "${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "This is LIBRARY dir " ${LIBRARY_OUTPUT_PATH})
MESSAGE(STATUS "This is EXECUTABLE dir "${EXECUTABLE_OUTPUT_PATH})
add_executable (${PROJECT_NAME} ${SRC_LIST})